funcionalidades completa para el modelo  Reserva

--- a/src/main/resources/templates/layouts/_mainLayout.html
+++ b/src/main/resources/templates/layouts/_mainLayout.html
@@ -6,8 +6,8 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <title>Reservas para un restaaurante</title>
-    <link th:href="@{css/styles.css}" rel="stylesheet" />
+    <title>Reservas para un restaurante</title>
+    <link th:href="@{/css/styles.css}" rel="stylesheet" />
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdeliver.met/npm/sweetalert2@11"></script>
 </head>
@@ -47,13 +47,13 @@
                         <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                         Cliente
                     </a>
-                    <a class="nav-link" href="#">
+                    <a class="nav-link" th:href="@{/reservas}">
                         <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                         Reservas
                     </a>
                     <a class="nav-link" href="#">
                         <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
-                        Nose
+                            Mesas
                     </a>
                     <a class="nav-link" href="#">
                         <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
@@ -79,7 +79,7 @@
         <footer class="py-4 bg-light mt-auto">
             <div class="container-fluid px-4">
                 <div class="d-flex align-items-center justify-content-between small">
-                    <div class="text-muted">Copyright &copy; ESFE - Reservas de Resdaurante 2024</div>
+                    <div class="text-muted">Copyright &copy; ESFE - Reservas de Restaurante 2024</div>
                     <div>
                         <a href="#">Privacy Policy</a>
                         &middot;
@@ -91,6 +91,6 @@
     </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-<script th:src="@{js/scripts.js}"></script>
+<script th:src="@{/js/scripts.js}"></script>
 </body>
 </html>
